<resources>
    <string name="app_name">FoodRecipeApp</string>
    <string name="api_key">365357d405234363b49243cbac587e87</string>
    <string name="dish_name">Dish Name</string>
    <string name="_2_persons">2 Persons</string>
    <string name="menu">Menu</string>
    <string name="dessert">Dessert</string>
    <string name="details">Recipe Details</string>
    <string name="source">Source</string>
    <string name="summary">Summary</string>
    <string name="ingredients">Ingredients</string>
    <string name="_1_pc">1 pc</string>
    <string name="chicken">Chicken</string>
    <string name="similar_recipes">Similar Recipes</string>
    <string name="equipments">Equipments</string>
    <string-array name="tags">

        <item>main course</item>
        <item>side dish</item>
        <item>dessert</item>
        <item>appetizer</item>
        <item>salad</item>
        <item>bread</item>
        <item>breakfast</item>
        <item>soup</item>
        <item>beverage</item>
        <item>sauce</item>
        <item>marinade</item>
        <item>fingerfood</item>
        <item>snack</item>
        <item>drink</item>

    </string-array>

</resources>