<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/orange"
    tools:context=".RecipeDetailsActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:title="@string/details"
        android:titleTextColor="@color/white"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/txtvView_meal_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Recipe Name"
                android:gravity="center"
                android:textColor="@color/white"
                android:padding="8dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtvView_meal_source"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/source"
                android:gravity="center"
                android:textStyle="italic"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:padding="8dp"/>

            <ImageView
                android:id="@+id/imgView_meal_image"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_margin="8dp"
                android:scaleType="centerCrop"/>

            <TextView
                android:id="@+id/txtvView_meal_summary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/summary"
                android:textSize="14sp"
                android:textColor="@color/white"
                android:maxLines="5"
                android:textStyle="normal"
                android:padding="8dp"
                android:layout_margin="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvMeal_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/similar_recipes"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:padding="8dp"
                android:gravity="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvMeal_similar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:padding="8dp"
                android:gravity="center"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvMeal_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"/>

        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>